--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.png
+.vscode
 
 # Created by https://www.gitignore.io/api/python,windows
 # Edit at https://www.gitignore.io/?templates=python,windows
